# lectureDG

./: .gitignore  .gitmodules  Makefile  README.md
assignment/: DM.tex
assignment/ShapeIndexing/: DM.tex
assignment/ShapeIndexing/database/: Bone-10.pgm  Bone-13.pgm  Bone-14.pgm  Bone-16.pgm  Bone-18.pgm  Bone-19.pgm  (+569 more)
assignments/: hidden-database.tgz
assignments/Inpainting/: biblio.bib  inpainting.tex
assignments/ShapeIndexing/: CMakeLists.txt  DM.tex  README  README.md  classes.csv  getRank.cpp  naiveDistance.cpp  scores.txt  scriptClassification.sh  scriptRobustness-Hurt-me-plenty.sh  scriptRobustness-I-m-too-young-to-die.sh  scriptRobustness-Nightmare.sh
final-exam/2014/: exam.tex
final-exam/2015/: exam.tex
practical-work/DGtalSkel/: CMakeLists.txt  DSSCirculatorExample.cpp  DSSExample.cpp  PGMObject.cpp  PGMReader.cpp  exampleImage.cpp  generate_digital_contour.cpp  helloworld.cpp  image2mesh.cpp  imgAddNoise.cpp  imgRotate.cpp  imgScale.cpp  mean_curvature.cpp  pointlist.cpp  simpleboard.cpp  testSet.cpp
practical-work/TD/: TD.aux
practical-work/TP1/: TD1_english.tex
practical-work/TP10/: TD10.tex
practical-work/TP11/: TD11.tex
practical-work/TP12/: TD12.aux  TD12.tex  rhone1.pgm  rhone3.pgm
practical-work/TP2/: TD2.tex  TD2_english.tex
practical-work/TP3/: TD3.tex
practical-work/TP5/: TD5.tex
practical-work/TP6/: TD6.tex
practical-work/TP7/: TD7.tex
practical-work/TP8/: TD8.tex
source/: bibliographie.rst  c-ga-convexhull.rst  c-ga-delaunay.rst  c-ga-mesh.rst  c-ga-mesh.rst~  c-ga-reco.rst  c-gd-contour-estimateurs.rst  c-gd-contour.rst  c-gd-intro.rst  c-gd-volumique.rst  c-intro.rst  c-ip-analyse.rst  conf.py  draft.txt  index.rst  notes.org
source/_static/: custom.css  slide-no.css  slide-no.js
source/_templates/: layout.html
source/images-backup/: carre_edt_surf.pgm  chamferGraphDom.eps  chamferVect.eps  dilation.pgm  droite_OBQ.pdf_t  dual_OBQ.pdf_t  dual_final_1.pdf_t  dual_naive1.pdf_t  dual_naive4.pdf_t  dual_naive4bis.pdf_t  dual_naive_final.pdf_t  dual_pixels1.pdf_t  dual_pixels4.pdf_t  dual_pixels_courbe.pdf_t  dual_pixels_final.pdf_t  dual_voxels_D_3D_2.pdf_t  dual_voxels_D_3D_pt_fixe.pdf_t  esp_param2.pdf_t  gradient_m.pgm  homme_circ.pgm  homme_edt_surf.pgm  laplacian_m.pgm  objects-deg.pgm  objects.pgm  pasunicite.eps  pixels.pdf_t  torus_skelsur.pgm  unimodular.eps
web/RadonTransform/: RadonTransform.html  RadonTransform_fr.html
(+960 files in other folders)
